--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
-  
+install: mvn install -DskipTest=true -Dmaven.javadoc.skyp=true -B -V
+script: mvn test -B
+
 notifications:
   email:
  - betxfree@gmail.com
